2007-10-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-wrong-passwd-regexp): Tune regexp.
	(tramp-get-remote-tmpdir): New defun.
	(tramp-make-tramp-temp-file): Use it.
	(tramp-local-call-process): New defun.  Replace all calls of
	`call-process' by this when appropriate.
	(tramp-handle-write-region): Replace calls of `file-attributes' by
	`tramp-compat-file-attributes'.
	(tramp-find-shell, tramp-open-connection-setup-interactive-shell):
	Make the first command a `tramp-send-command' call, with let-bind
	of `tramp-end-of-output'.
	(tramp-version, tramp-bug, tramp-reporter-dump-variable)
	(tramp-load-report-modules, tramp-append-tramp-buffers): Move to
	tramp-cmds.el.

	* tramp-fish.el (tramp-fish-handle-copy-file)
	(tramp-fish-do-copy-or-rename-file)
	(tramp-fish-do-copy-or-rename-file-directly):
	* tramp-smb.el (tramp-smb-handle-copy-file):
	Add parameter PRESERVE-UID-GID.

2007-10-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-set-file-uid-gid): Protect `call-process' when
	we are local.

2007-10-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-find-shell)
	(tramp-open-connection-setup-interactive-shell): Improve sending
	initial commands.
	(tramp-action-terminal): Send debug message.
	(tramp-wait-for-shell-prompt, tramp-send-command-internal): Removed.
	(tramp-barf-if-no-shell-prompt): Insert code of
	`tramp-wait-for-shell-prompt'.

	* tramp-util.el (tramp-PC-expand-many-files): New defun.
	(tramp-advice-PC-expand-many-files): Defadvice moved from tramp.el.

2007-10-22  Sean O'Rourke  <sorourke@cs.ucsd.edu>  (tiny change)

	* tramp.el (tramp-handle-expand-many-files): Remove.
	(PC-expand-many-files): Remove advice.

2007-10-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-do-copy-or-rename-file-directly): Make more
	rigid checks.
	(tramp-handle-insert-file-contents): Don't raise a tramp-error but
	a signal, in order to give the callee a chance to suppress.